fix dashboard template picker dark mode
also actually fix project template displaying (for edge cases)

--- a/src/css/dashboard/darkmode.scss
+++ b/src/css/dashboard/darkmode.scss
@@ -171,7 +171,7 @@ main.darkmode {
     }
   }
 
-  .dashboard__template-picker {
+  .template-picker__wrapper {
     .template-picker__list {
       li.list-group-item {
         background-color: $dark-gray-1;
@@ -218,9 +218,9 @@ main.darkmode {
     }
   }
 
-  /////////////
-  // options //
-  /////////////
+  //////////////
+  // settings //
+  //////////////
   .dashboard__options {
     h1 {
       &.secondary-text {
